# Mfit-Animate

./: LICENSE  pyproject.toml
mfit-animator/: interp-animation.py
mfit_animate/: __init__.py  mfit_animate.py
mfit_animator/: mfit_animator.py
