[tool.poetry]
name = "mfit-animator"
version = "0.0.1"
description = "Creates animations of fitting models to data"
authors = ["Tsar Bomba Nick <njkuechel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
