[tool.poetry]
name = "mfit-animate"
version = "0.0.2"
description = "Creates animations of fitting models to data"
authors = ["Tsar Bomba Nick <njkuechel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
streamlit = "^1.15.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
maturin = "^0.14.5"

[tool.poetry.scripts]
mfit-animate = 'mfit_animator:startup'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
